# laboratoryWork_3

./: CMakeLists.txt  func.h  main.c  task1_do_while.c  task1_for.c  task1_while.c  task2_do_while.c  task2_for.c  task2_while.c  task3_do_while.c  task3_for.c  task3_while.c  task4_do_while.c  task4_for.c  task4_while.c  task5_do_while.c  task5_for.c  task5_while.c
