# CMakeList.txt: проект CMake для laboratoryWork_3; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (laboratoryWork_3 "main.c" "func.h" "task1_for.c" "task2_for.c" "task3_for.c" "task4_for.c" "task5_for.c")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
