# CMakeList.txt: проект CMake для laboratoryWork_3; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (laboratoryWork_3 "main.c" "func.h" "task1_do_while.c" "task2_do_while.c" "task3_do_while.c" "task4_do_while.c" "task5_do_while.c")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
